# ffvtool

./: .gitignore  CMakeLists.txt  launch.vs.json  main.cpp
ffv/: agb_huff.hpp  crc.hpp  crc32.hpp  gba.cpp  gba.hpp  gba_rom.cpp  gba_rom.hpp  gba_texts.cpp  gba_texts.hpp  ips.hpp  ips_ext.hpp  ips_writer.hpp  istream_find.hpp  rom.cpp  rom.hpp  text_mutator.cpp  text_mutator.hpp  text_table.cpp  text_table.hpp  tree.hpp
